@@ -28,6 +28,7 @@ from libchristine.Translator import *
 from libchristine import clibrary
 from libchristine.ChristineGConf import *
 from libchristine.Share import *
+import time
 
 (PATH,
 NAME,
@@ -299,8 +300,9 @@ class library(GtkMisc,gtk.DrawingArea):
 						SEARCH,",".join([name,album,artist]),
 						PLAY_COUNT,0,
 						GENRE,genre)
-
-			gobject.timeout_add(150,self.emit_signal,"tags-found")
+			time.sleep(0.09)
+			#gobject.timeout_add(150,self.emit_signal,"tags-found")
+			self.emit_signal("tags-found")
 		if t == gst.MESSAGE_ERROR:
 			print b.parse_error()
 		return True
