@@ -1,3 +1,7 @@
+2007-04-17  gettextize  <bug-gnu-gettext@gnu.org>
+
+	* Makefile.am (EXTRA_DIST): Add config.rpath.
+
 2007-04-15 Marco Antonio Islas Cruz <markuz@islascruz.org>
 	* libchristine/Christine.py.in:
 		- dBus Disabled.
